# dfs-ui-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  index.html  serve.sh  setup.sh
src/: main.rs  markdown.rs
src/components/: author_card.rs  pagination.rs  post_card.rs
src/pages/: home.rs  page_not_found.rs  post.rs  post_list.rs
static/css/: index.scss
