[package]
name = "dfs-ui-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.19"
yew-router = "0.16"
instant = { version = "0.1", features = ["wasm-bindgen"] }
lipsum = "0.8"
log = "0.4"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = ["small_rng"] }
wasm-logger = "0.2"
wasm-bindgen = "0.2"
rayon = "1.5"
wasm-bindgen-rayon = "1.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
gloo-timers = "0.2"
gloo-utils = "0.1"
web-sys = { version = "0.3.60", features = ["Window", "Navigator"] }
pulldown-cmark = { version = "0.9.2", default-features = false }

eval-utility = { git = "https://github.com/floating-floaties/eval-utility.git" }
inflection-rs = { git = "https://github.com/floating-floaties/inflection-rs.git" }
